// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: literals > Row 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Atom",
    "value": "Row",
  },
}
`;

exports[`parser: literals > Type 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Atom",
    "value": "Type",
  },
}
`;

exports[`parser: literals > boolean: true 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Bool",
    "value": true,
  },
}
`;

exports[`parser: literals > number: 1 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Num",
    "value": 1,
  },
}
`;

exports[`parser: literals > string: "hello" 1`] = `
{
  "type": "lit",
  "value": {
    "type": "String",
    "value": "hello",
  },
}
`;

exports[`parser: literals > unit: ! 1`] = `
{
  "type": "lit",
  "value": {
    "type": "unit",
  },
}
`;
